--- a/src/Brioche/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/layout.html.twig
@@ -48,14 +48,19 @@
     </head>
     <body>
         {% include 'BriocheCoreBundle::_navbar.html.twig' %}
+
+        {% block jumbotron %}
+        {% endblock %}
         
-        <div class="container">
+        <div id="main-container" class="container">
             {% block body %}
             {% endblock %}
         </div>
 
         <br /><br />
-        
+
+        {% include 'BriocheCoreBundle::_footer.html.twig' %}
+
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2.min.js"></script>
