--- a/src/Brioche/CoreBundle/Resources/views/Front/cities.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/cities.html.twig
@@ -14,16 +14,23 @@
                 <div class="panel-body">
                     <p class="lead">
                         Je livre pour l'instant vos brioches en Essonne, dans les villes suivantes uniquement :<br />
-                        <br />
-
-                        <ul>
-                            {% for city in cities %}
-                                <li class="lead">
-                                    <b>{{ city.title }}</b> ({{ city.postalcode }})
-                                </li>
-                            {% endfor %}
-                        </ul>
                     </p>
+
+                    <div class="row">
+                        <div class="col-sm-10 col-sm-offset-1">
+                            <ul class="lead list-unstyled">
+                                {% for city in cities %}
+                                    <li>
+                                        <p>
+                                            <span class="glyphicon glyphicon-map-marker"></span>
+                                            <b>{{ city.title }}</b>
+                                            ({{ city.postalcode }})
+                                        </p>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
