add images in products page

--- a/src/Brioche/CoreBundle/Resources/views/Front/products.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/products.html.twig
@@ -9,7 +9,7 @@
     <h2 class="text-center">Ingrédients et allergies</h2>
     <br />
     <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
+        <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="row">
@@ -22,11 +22,16 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
+                            <img
+                                class="hidden-xs img-responsive"
+                                src="http://i-cms.journaldesfemmes.com/image_cms/300/1256682-quel-type-de-farine-utiliser.jpg"
+                                alt="Farine de blé"
+                            />
                         </div>
                         <div class="col-sm-8">
                             <h3>Farine</h3>
                             <p>
-                                Farine T45 ou T55 du supermarché.
+                                Farine de blé T45 ou T55 du supermarché.
                             </p>
                             <p class="allergenes">Allergènes :
                                 <span class="label label-primary">Gluten</span>
@@ -37,11 +42,16 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
+                            <img
+                                class="hidden-xs img-responsive"
+                                src="http://static.commentcamarche.net/sante-medecine.commentcamarche.net/faq/images/156-istock-000005270483xsmall-s-.png"
+                                alt="Œufs bio de poules élevées en plein air"
+                            />
                         </div>
                         <div class="col-sm-8">
                             <h3>Œufs</h3>
                             <p>
-                                Oeufs bio de poules élevées en plein air.
+                                Œufs bio de poules élevées en plein air.
                             </p>
                             <p class="allergenes">Allergènes :
                                 <span class="label label-primary">Œufs</span>
@@ -50,6 +60,11 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
+                            <img
+                                class="hidden-xs img-responsive"
+                                src="http://www.paysanbreton.fr/sites/paysan-breton.yellowcake.net/files/public/le-lait-ribot-gamme_0.png"
+                                alt="Lait"
+                            />
                         </div>
                         <div class="col-sm-8">
                             <h3>Lait</h3>
@@ -64,6 +79,30 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
+                            <img
+                                class="hidden-xs img-responsive"
+                                src="http://images.lpcdn.ca/641x427/201111/02/402719.jpg"
+                                alt="Beurre"
+                            />
+                        </div>
+                        <div class="col-sm-8">
+                            <h3>Beurre</h3>
+                            <p>
+                                Beurre
+                            </p>
+                            <p class="allergenes">Allergènes :
+                                <span class="label label-primary">Lait</span>
+                                <span class="label label-primary">Lactose</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <img
+                                class="hidden-xs img-responsive"
+                                src="http://je-mange-vivant.com/wp-content/uploads/2012/10/sugar-cubes.jpg"
+                                alt="Sucre"
+                            />
                         </div>
                         <div class="col-sm-8">
                             <h3>Sucre</h3>
@@ -74,16 +113,11 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                        </div>
-                        <div class="col-sm-8">
-                            <h3>Beurre</h3>
-                            <p>
-                                Beurre
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4">
+                            <img
+                                class="hidden-xs img-responsive"
+                                src="http://media.simplymarket.fr/PHOTO2/3011360/004420.jpg"
+                                alt="Levure de boulanger"
+                            />
                         </div>
                         <div class="col-sm-8">
                             <h3>Levure</h3>
@@ -94,11 +128,16 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
+                            <img
+                                class="hidden-xs img-responsive"
+                                src="http://media.mathon.fr/Images/Produitsv2/Amazon/68001_0_0_-Emile%20Henry-Main-a-sel.jpg"
+                                alt="Sel marin"
+                            />
                         </div>
                         <div class="col-sm-8">
                             <h3>Sel</h3>
                             <p>
-                                Sel
+                                Sel marin
                             </p>
                         </div>
                     </div>
