edit date format in guest book: remove time, add year

--- a/src/Brioche/CoreBundle/Resources/views/Comment/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Comment/index.html.twig
@@ -50,8 +50,7 @@
                             <p class="text-right">
                                 <b>{{ comment.author }}</b>,
 
-                                le <span class="text-capitalize">{{ comment.dateCreate|localizeddate('none', 'none', 'fr', null, 'EEEE d MMMM') }}</span>
-                                à {{ comment.dateCreate|localizeddate('none', 'none', 'fr', null, 'H\'h\'mm') }}
+                                le <span class="text-capitalize">{{ comment.dateCreate|localizeddate('none', 'none', 'fr', null, 'EEEE d MMMM yyyy') }}</span>
                             </p>
                         </div>
                     </div>
