set client full name in cookie and load it in guest book to avoid caching private data, change star rating colors

--- a/src/Brioche/CoreBundle/Resources/views/Comment/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Comment/index.html.twig
@@ -35,7 +35,7 @@
                     <div class="panel">
                         <div class="panel-body">
                             <div class="stars">
-                                <p class="lead text-right text-{{ ['default', 'danger', 'warning', 'info', 'primary', 'success'][comment.note] }}">
+                                <p class="lead text-right text-{{ ['default', 'danger', 'warning', 'warning', 'success', 'success'][comment.note] }}">
                                     {% for i in 1..comment.note %}
                                         <span class="glyphicon glyphicon-star"></span>
                                     {% endfor %}
