--- a/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
@@ -1,5 +1,5 @@
 <div class="row fuelux hidden-xs">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
         <div class="wizard">
             <ul class="steps">
                 {% set steps = [
