flash messages, check round before lock and on brioche loading

--- a/src/Brioche/CoreBundle/Resources/public/css/style.css
+++ b/src/Brioche/CoreBundle/Resources/public/css/style.css
@@ -16,6 +16,10 @@ body {
         margin-top: 24px;
     }
 }
+.alerts {
+    margin-bottom: -16px;
+    margin-top: 16px;
+}
 .jumbotron h2 {
     font-size: 36px;
     margin: 0;
