--- a/src/Brioche/CoreBundle/Resources/views/_rounds.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/_rounds.html.twig
@@ -13,8 +13,8 @@
                                 <span class="glyphicon glyphicon-ok"></span>
                             </button>
                         {% else %}
-                            <button class="btn btn-primary btnaction" role="button">
-                                <span class="glyphicon glyphicon-remove"></span>
+                            <button class="btn btn-warning btnaction" role="button">
+                                <span class="glyphicon glyphicon-lock"></span>
                             </button>
                         {% endif %}
                     </div>
