--- a/src/Brioche/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/layout.html.twig
@@ -50,6 +50,23 @@
 
         {% block jumbotron %}
         {% endblock %}
+
+        {% if app.session.flashbag.peekAll|length > 0 %}
+            <div class="container alerts">
+                <div class="row">
+                    <div class="col-sm-10 col-sm-offset-1">
+                        {% for type, flashMessages in app.session.flashbag.all() %}
+                            {% for flashMessage in flashMessages %}
+                                <div class="alert alert-{{ type }} alert-dismissible" role="alert">
+                                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                    {{ flashMessage }}
+                                </div>
+                            {% endfor %}
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        {% endif %}
         
         <div id="main-container" class="container">
             {% block body %}
