allow admin to author comments

--- a/src/Brioche/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Brioche/AdminBundle/Resources/views/layout.html.twig
@@ -12,6 +12,7 @@
         
         {% stylesheets
             'bundles/briochecore/css/*'
+            'bundles/briocheadmin/css/*'
             filter='cssrewrite'
         %}
             <link rel="stylesheet" type="text/css" href="{{ asset_url }}" />
