--- a/src/Brioche/AdminBundle/Resources/views/Default/_comments.html.twig
+++ b/src/Brioche/AdminBundle/Resources/views/Default/_comments.html.twig
@@ -13,15 +13,27 @@
                 <th>Auteur</th>
                 <th>Message</th>
                 <th>Date</th>
+                <th>Status</th>
             </tr>
         </thead>
         <tbody>
             {% for comment in comments %}
-                <tr class="{{ (comment.note < 2) ? 'danger' : ((comment.note < 4) ? 'warning' : 'success') }}">
+                <tr class="{{ (comment.note < 2) ? 'danger' : ((comment.note < 4) ? 'warning' : 'success') }} {% if comment.disabled %}disabled{% endif %}">
                     <td><b>{{ comment.note }}</b> / 5</td>
                     <td>{{ comment.author }}</td>
                     <td>{{ comment.content|nl2br }}</td>
                     <td>{{ comment.dateCreate|date('j/m/y H:i') }}</td>
+                    <td>
+                        {% if comment.disabled %}
+                            <a href="{{ path('admin_author_comment', {id: comment.id, status: 'enable'}) }}">
+                                <span class="label label-default">Refusé</span>
+                            </a>
+                        {% else %}
+                            <a href="{{ path('admin_author_comment', {id: comment.id, status: 'disable'}) }}">
+                                <span class="label label-success">Visible</span>
+                            </a>
+                        {% endif %}
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
