--- a/src/Brioche/CoreBundle/Resources/public/css/style.css
+++ b/src/Brioche/CoreBundle/Resources/public/css/style.css
@@ -106,8 +106,8 @@ h1 {
     overflow: hidden;
 }
 .fuelux .wizard .steps a {
-    font-size: 16px;
-    padding: 8px 4px 8px 4px;
+    font-size: 15px;
+    padding: 8px 3px;
 }
 .fuelux .wizard .steps li {
     padding-left: 18px;
@@ -134,6 +134,11 @@ h1 {
 }
 .fuelux .wizard ul li.complete a {
     color: #468847;
+}
+.fuelux .wizard ul li .glyphicon:before {
+    font-size: 10px;
+    position: relative;
+    bottom: 2px;
 }
 .price-table {
 }
