--- a/src/Brioche/AdminBundle/Resources/views/Default/_comments.html.twig
+++ b/src/Brioche/AdminBundle/Resources/views/Default/_comments.html.twig
@@ -12,20 +12,21 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th>Note</th>
-                    <th>Auteur</th>
+                    <th>Meta</th>
                     <th>Message</th>
-                    <th>Date</th>
                     <th>Status</th>
                 </tr>
             </thead>
             <tbody>
                 {% for comment in comments %}
                     <tr class="{{ (comment.note < 2) ? 'danger' : ((comment.note < 4) ? 'warning' : 'success') }} {% if comment.disabled %}disabled{% endif %}">
-                        <td><b>{{ comment.note }}</b> / 5</td>
-                        <td>{{ comment.author }}</td>
+                        <td>
+                            <b>{{ comment.author }}</b>,<br />
+                            <small>le {{ comment.dateCreate|date('j/m/y') }}</small><br />
+                            <small>à {{ comment.dateCreate|date('H:i') }},</small><br />
+                            <b class="lead">{{ comment.note }}</b> / 5
+                        </td>
                         <td>{{ comment.content|nl2br }}</td>
-                        <td>{{ comment.dateCreate|date('j/m/y H:i') }}</td>
                         <td>
                             {% if comment.disabled %}
                                 <a href="{{ path('admin_author_comment', {id: comment.id, status: 'enable'}) }}">
