--- a/src/Brioche/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Brioche/AdminBundle/Resources/views/Default/index.html.twig
@@ -2,20 +2,20 @@
 
 {% block body %}
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-sm-12">
         {% include 'BriocheAdminBundle:Default:_rounds.html.twig' %}
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-4">
+    <div class="col-sm-4">
         {% include 'BriocheAdminBundle:Default:_mails.html.twig' %}
     </div>
-    <div class="col-xs-8">
+    <div class="col-sm-8">
         {% include 'BriocheAdminBundle:Default:_comments.html.twig' %}
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-6">
+    <div class="col-sm-6">
         {% include 'BriocheAdminBundle:Default:_sendMail.html.twig' %}
     </div>
 </div>
