--- a/src/Brioche/CoreBundle/Resources/views/Mail/test.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Mail/test.html.twig
@@ -1,5 +1,5 @@
 {% extends "BriocheCoreBundle:Mail:layout.html.twig" %}
 
 {% block body %}
-    <p>{{ content|nl2br }}</p>
+    <p>{{ content|raw|nl2br }}</p>
 {% endblock %}
