--- a/src/Brioche/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/layout.html.twig
@@ -26,6 +26,15 @@
             {% endstylesheets %}
         <![endif]-->
         
+        <!--[if lt IE 8]>
+            {% stylesheets
+                'bundles/briochecore/css/ie/bootstrap-ie7.css'
+                filter='cssrewrite'
+            %}
+                <link rel="stylesheet" type="text/css" href="{{ asset_url }}" />
+            {% endstylesheets %}
+        <![endif]-->
+        
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2.min.css">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2-bootstrap.min.css">
