--- a/src/Brioche/CoreBundle/Resources/views/Command/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Command/index.html.twig
@@ -12,7 +12,7 @@
 
             {% include 'BriocheCoreBundle:Command:_firstMessageSection.html.twig' %}
 
-            {% if not brioche.validated %}
+            {% if brioche.round.available and not brioche.validated %}
                 {% include 'BriocheCoreBundle:Command:_paymentOptionsSection.html.twig' %}
             {% endif %}
 
