--- a/src/Brioche/CoreBundle/Resources/views/Brioche/layout.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/layout.html.twig
@@ -1,7 +1,7 @@
 {% extends "BriocheCoreBundle::layout.html.twig" %}
 
 {% block body %}
-{% if not brioche.locked %}
+{% if not brioche.locked and not disableWizard|default(false) %}
     {% include 'BriocheCoreBundle:Brioche:_wizard.html.twig' %}
 {% endif %}
 {% endblock %}
