clone client, thumbnail style, ajust brioche average weight

--- a/src/Brioche/CoreBundle/Resources/public/css/style.css
+++ b/src/Brioche/CoreBundle/Resources/public/css/style.css
@@ -23,7 +23,7 @@ a {
     margin-bottom: -16px;
     margin-top: 16px;
 }
-div.thumbnail:hover, div.thumbnail:focus, div.thumbnail.active {
+div.thumbnail.thumbnail-hover:hover, div.thumbnail.thumbnail-hover:focus, div.thumbnail.thumbnail-hover.active {
     border-color: #dd4814;
 }
 .jumbotron h2 {
